--- a/Populasi_Sampel.ipynb
+++ b/Populasi_Sampel.ipynb
@@ -65,21 +65,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Populasi** adalah wilayah generalisasi yang terdiri atas: obyek/subyek yang mempunyai kuantitas dan karakteristik tertentu yang ditetapkan oleh peneliti untuk dipelajari dan kemudian ditarik kesimpulannya. (Sugiyono)\n",
-        "Atau dengan kata lain, populasi adalah semua unit atau obyek yang diteliti atau dianalisa dalam penelitian yang kita lakukan. Populasi tidak hanya sekedar jumlah dari obyek/subyek yang diteliti atau dipelajari, namun meliputi seluruh karakteristik/sifat yang dimiliki oleh obyek/subyek tersebut. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DhgOhPnHZusd",
-        "colab_type": "text"
-      },
-      "source": [
-        "Contoh:\n",
-        "1.   Dilakukan penelitian di sekolah X, maka sekolah X memiliki populasi yang bisa berupa jumlah subyek/orang. Pengertian pertama, memberi makna bahwa populasi merupakan sekumpulan orang/subyek dan obyek yang diamati. Pengertian kedua memberikan petunjuk bahwa orang-orang di sekolah X mempunyai karakteristik, misal motivasi kerjanya, disiplin kerjanya, disiplin kerjanya dll. Sekolah juga memilik karakteristik lain, seperti kebijakannya, prosedur kerjanya, lulusan  yang dihasilkan dll.\n",
-        "2.   Dalam bidang kedokteran, satu orang sering bertindak sebagi populasi. Darah yang ada pada setiap orang adalah populasi, kalau akan diperiksa cukup diambil sebagian darahnya yang berupa sampel. Data yang diteliti dari sampel darah tersebut, selanjutnya diberlakukan ke seluruh darah yang dimiliki orang tersebut.\n",
-        "\n"
+        "**Populasi** merupakan keseluruhan (universum) dari objek penelitian yang menjadi pusat perhatian dan menjadi sumber data penelitian. Objek penelitian dapat berupa manusia, hewan, tumbuh-tumbuhan, gejala, nilai, peristiwa, sikap hidup, dan sebagainya. Sampel merupakan bagian dari populasi yang dipilih dengan menggunakan aturan-aturan tertentu, yang digunakan untuk mengumpulkan informasi/data yang menggambarkan sifat atau ciri yang dimiliki populasi."
       ]
     },
     {
@@ -99,24 +85,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Sampel** adalah bagian dari jumlah dan karakteristik yang dimiliki oleh populasi. Bila populasi besar, dan peneliti tidak mungkin mempelajari semua yang ada pada populasi, misalnya karena keterbatasan dana, tenaga dan waktu, maka peneliti dapat menggunakan sampel yang diambil dari populasi tersebut. Apa yang dipelajari dari sampel, kesimpulannya akan diberlakukan untuk populasi. Sehingga, sampel yang diambil dari populasi harus representatif. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZOJf_-LygWRt",
-        "colab_type": "text"
-      },
-      "source": [
-        "Contoh:\n",
+        "**Sampel** merupakan bagian dari populasi yang dipilih dengan menggunakan aturan-aturan tertentu, yang digunakan untuk mengumpulkan informasi/data yang menggambarkan sifat atau ciri yang dimiliki populasi.\n",
         "\n",
-        "1.   Dalam data set kambing di peternakan, 100 kambing menjadi sampel. Populasinya adalah seluruh kambing yang ada pada peternakan tersebut\n",
-        "2.   Pada populasi tanaman anggrek yang tumbuh di pedalaman hutan Kalimantan, diambil sampel sebanyak 10 tanaman anggrek\n",
-        "3.   Terdapat 25 penduduk laki-laki dijadikan sampel untuk mengisi quesioner tentang lamanya tidur dalam satu hari. Dimana populasinya adalah seluruh penduduk laki-laki di Kelurahan Lowokwaru, Kecamatan Lowokwaru, Kotamadya Malang\n",
-        "\n",
-        "\n",
-        "\n"
+        "Dari definisi tersebut jelas bahwa sampel yang kita ambil digunakan untuk menggambarkan karakteristik suatu populasi, atau dengan kata lain, sampel digunakan untuk menggeneralisasi suatu populasi. Dengan demikian, sampel harus betul-betul bersifat representatif sehingga dapat mewakili dan mencerminkan karakteristik populasi dari mana sampel itu diambil."
       ]
     },
     {
